# yam-engine

./: .gitignore  Cargo.toml  Draft.md  LICENSE  README  README.md  ROADMAP.md  build.rs
assets/shaders/background/: blueprint.frag  blueprint.vert
assets/shaders/geometry/: geometry.frag  geometry.vert
ddocs/: ROADMAP.md  module_window_draft.md
designs/: render_geometry.md
docs/: design_usecases.md
examples/: 1_1_app.rs  1_2_input.rs  1_3_time.rs  1_4_window.rs  1_5_load_texture.rs  1_app.rs  1_basic.rs  2_1_render2d.rs  2_1_sprite.rs  2_2_geometry.rs  2_2_render2d_millions.rs  2_input.rs  3_1_millions_sprites.rs  3_3_millions_geometry.rs  3_time.rs  5_render2d.rs  6_render2d_millions.rs  app_basic.rs  app_input.rs  app_render.rs  dyn_sync.rs  full_event_loop.rs  legion_access_by_entry.rs  legion_insert_components.rs  legion_query.rs  legion_query_with_filter.rs  legion_system.rs  millions_wander_sprites.rs  nalgebra_learn.rs  nalgebra_transformation.rs  num_cpus.rs  simple_winit.rs  steering_behaviour.rs  wander_million_sprites.rs  winit_exp.rs
examples/app/: example01.rs
modules/app/: Cargo.toml
modules/app/src/: main.rs
src/: app.rs  input.rs  lib.rs  misc.rs  settings.rs  window.rs
src/app/: misc.rs  mod.rs
src/assets/: mod.rs  types.rs
src/components/: camera.rs  geometry.rs  mod.rs  sprite.rs  time.rs  transform.rs
src/misc/: color.rs  coordinates.rs  mod.rs  time.rs  viewport.rs
src/render/: geometry_shader.frag  geometry_shader.frag.spv  geometry_shader.vert  geometry_shader.vert.spv  mod.rs  renderer.rs  renderers.rs  shader.frag  shader.wgsl  sprite_shader.frag  sprite_shader.frag.spv  sprite_shader.vert  sprite_shader.vert.spv  sprite_shader.wgsl
src/render/components/: camera.rs  mod.rs  sprite.rs  transform.rs
src/render/renderers/: background_renderer.rs  geometry2d_renderer.rs  geometry_renderer.rs  mod.rs
src/window/: mod.rs
