[package]
name = "yam"
version = "0.1.0"
authors = ["Allen Pocket"]
edition = "2018"
description ="A game engine dedicated to running millions of characters."
homepage = "https://github.com/AllenPocketGamer/yam-engine"
repository = "https://github.com/AllenPocketGamer/yam-engine"
keywords = ["game engine", "millions"]
license = "MIT"

[dependencies]
# about render
wgpu = "0.7.*"
winit = "0.24.*"

# ecs framework
legion = "0.4.*"

# about math calculation
nalgebra = "0.24.*"
# simba = { version = "0.4.0", features = ["wide"] }
# num-traits = "0.2.14"

# tools
num_cpus = "1.*"
bytemuck = { version = "1.4.*", features = ["derive"] }
colored = "2.0.*"
crossterm = "0.18.*"

# async
futures = "0.3.*"

[dev-dependencies]
rand = "0.8.*"
rayon = "1.5.*"
approx = "0.4.*"
criterion = "0.3.*"

[build-dependencies]
anyhow = "1.0.*"
fs_extra = "1.2.*"
glob = "0.3.*"
shaderc ="0.7.*"

[[bench]]
name = "my_benchmark"
harness = false

# [profile.bench]
# codegen-units = 1