[package]
name = "yam"
version = "0.1.0"
authors = ["Allen Pocket"]
edition = "2018"
description ="A game engine dedicated to running millions of units."
homepage = "https://github.com/AllenPocketGamer/yam-engine"
repository = "https://github.com/AllenPocketGamer/yam-engine"
keywords = ["game engine", "millions"]
license = "MIT"

[lib]

[dependencies]
# about render
wgpu = "0.7.*"
winit = "0.24.*"

# ecs framework
legion = "0.4.*"

# about math calculation
nalgebra = "0.24.*"
# simba = { version = "0.4.0", features = ["wide"] }
# num-traits = "0.2.14"

# tools
num_cpus = "1.*"
bytemuck = { version = "1.4.*", features = ["derive"] }
colored = "2.0.*"
crossterm = "0.18.*"

# async
futures = "0.3.*"

[dev-dependencies]
rand = "0.8.*"
rayon = "1.5.*"
approx = "0.4.*"
criterion = "0.3.*"

[build-dependencies]
glob = "0.3.*"
anyhow = "1.0.*"
shaderc ="0.7.*"
fs_extra = "1.2.*"

# [[bench]]
# name = "my_benchmark"
# harness = false

# [profile.bench]
# codegen-units = 1

[[example]]
name = "app"
path = "examples/1_1_app.rs"

[[example]]
name = "input"
path = "examples/1_2_input.rs"

[[example]]
name = "time"
path = "examples/1_3_time.rs"

[[example]]
name = "window"
path = "examples/1_4_window.rs"

[[example]]
name = "render2d"
path = "examples/2_1_render2d.rs"

[[example]]
name = "render2d_millions"
path = "examples/2_2_render2d_millions.rs"

[[example]]
name = "render2d_millions_with_simd"
path= "example/2_3_render2d_millions_with_simd"